--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,40 +8,65 @@
     <p>{{.Description}}</p>
   </div>
   <div id="action-buttons">
-    <a class="button outline big" href="https://github.com/ajatprabha/gsoc-meta-k8s" onclick="_gaq.push(['_trackEvent', 'kube', 'github']);">View on Github</a>
+    <a class="button outline big" href="https://github.com/ajatprabha/gsoc-meta-k8s"
+      onclick="_gaq.push(['_trackEvent', 'kube', 'github']);">View on Github</a>
   </div>
   <div id="kube-features">
     <div class="row gutters">
       <div class="col col-4 item">
-        <figure><img src="{{ "/img/kube/icon-baseline.png" | relURL }}" alt="Image" height="48" width="48"></figure>
-        <h3>Horizontal Rhythm</h3>
-        <p>Just some random lorem ipsum kinda text</p>
+        <figure><i class="fa fa-user-o fa-5x"></i></figure>
+        <h3>General Information</h3>
+        <table class="info-table">
+          <tr>
+            <td>Name:</td>
+            <td>Ajat Prabha</td>
+          </tr>
+          <tr>
+            <td>GitHub:</td>
+            <td><a href="https://github.com/ajatprabha" target="_blank">ajatprabha</a></td>
+          </tr>
+          <tr>
+            <td>Email:</td>
+            <td><a href="mailto:ajat.prabha.leo@gmail.com">ajat.prabha.leo@gmail.com</a></td>
+          </tr>
+          <tr>
+            <td>Blog:</td>
+            <td><a href="https://ajatprabha.in">https://ajatprabha.in</a></td>
+          </tr>
+          <tr>
+            <td>Mentors:</td>
+            <td>
+              <ul>
+                <li><a href="https://github.com/maciaszczykm">Marcin Maciaszczyk</a></li>
+                <li><a href="https://github.com/floreks">Sebastian Florek</a></li>
+              </ul>
+            </td>
+          </tr>
+        </table>
       </div>
       <div class="col col-4 item">
-          <figure><img src="{{ "/img/kube/icon-baseline.png" | relURL }}" alt="Image" height="48" width="48"></figure>
-          <h3>Horizontal Rhythm</h3>
-          <p>Just some random lorem ipsum kinda text</p>
-        </div>
+        <figure><i class="fa fa-link fa-5x"></i></figure>
+        <h3>Links</h3>
+        <p>Updating Soon</p>
+      </div>
       <div class="col col-4 item">
-          <figure><img src="{{ "/img/kube/icon-baseline.png" | relURL }}" alt="Image" height="48" width="48"></figure>
-          <h3>Horizontal Rhythm</h3>
-          <p>Just some random lorem ipsum kinda text</p>
-        </div>
+        <figure><i class="fa fa-code-fork fa-5x"></i></figure>
+        <h3>Proposals</h3>
+        <ul>
+          <li><a href="{{ "/assets/K8s_GSoC_Proposal.pdf" | relURL }}">GSoC Proposal</a></li>
+          <li><a href="https://github.com/kubernetes/enhancements/pull/814">KEP for Plugin Mechanism</a></li>
+        </ul>
+      </div>
       <div class="col col-4 item">
-          <figure><img src="{{ "/img/kube/icon-baseline.png" | relURL }}" alt="Image" height="48" width="48"></figure>
-          <h3>Horizontal Rhythm</h3>
-          <p>Just some random lorem ipsum kinda text</p>
-        </div>
+        <figure><i class="fa fa-exclamation fa-5x"></i></figure>
+        <h3>Issues</h3>
+        <p>Updating Soon</p>
+      </div>
       <div class="col col-4 item">
-          <figure><img src="{{ "/img/kube/icon-baseline.png" | relURL }}" alt="Image" height="48" width="48"></figure>
-          <h3>Horizontal Rhythm</h3>
-          <p>Just some random lorem ipsum kinda text</p>
-        </div>
-      <div class="col col-4 item">
-          <figure><img src="{{ "/img/kube/icon-baseline.png" | relURL }}" alt="Image" height="48" width="48"></figure>
-          <h3>Horizontal Rhythm</h3>
-          <p>Just some random lorem ipsum kinda text</p>
-        </div>
+        <figure><i class="fa fa-code-fork fa-5x"></i></figure>
+        <h3>Pull Requests</h3>
+        <p>Updating Soon</p>
+      </div>
     </div>
   </div>
 </div>
