--- a/layouts/index.html
+++ b/layouts/index.html
@@ -47,7 +47,9 @@
       <div class="col col-4 item">
         <figure><i class="fa fa-link fa-5x"></i></figure>
         <h3>Links</h3>
-        <p>Updating Soon</p>
+        <ul>
+          <li><a target="_blank" href="https://blog.angularindepth.com/building-extensible-dynamic-pluggable-enterprise-application-with-angular-aed8979faba5">AOT Plugin Architecture Implementation PoC</a> - Alexey Zuev</li>
+        </ul>
       </div>
       <div class="col col-4 item">
         <figure><i class="fa fa-code-fork fa-5x"></i></figure>
