add last updated

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,7 @@
     <nav>
       <ul>
         <li><span>GSoC Meta K8s</span></li>
+        <li><span>Last Updated: {{ now.Format "Jan 2, 2006"}}</span></li>
         <li>
           <a href="/weekly/">Weekly</a>
         </li>
