add GSoC project link and include Issues/PRs from GSoC timeline pnly

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -47,9 +47,10 @@
       <div class="col col-4 item">
         <figure><i class="fa fa-link fa-5x"></i></figure>
         <h3>Links</h3>
-        <ul>
+        <ol>
           <li><a target="_blank" href="https://blog.angularindepth.com/building-extensible-dynamic-pluggable-enterprise-application-with-angular-aed8979faba5">AOT Plugin Architecture Implementation PoC</a> - Alexey Zuev</li>
-        </ul>
+          <li><a target="_blank" href="https://summerofcode.withgoogle.com/projects/#6037714929975296">GSoC Project Link</a></li>
+        </ol>
       </div>
       <div class="col col-4 item">
         <figure><i class="fa fa-code-fork fa-5x"></i></figure>
